zno-macro-draft/tests/zno/ui/err/013-optional-is-not-ident.rs
use zno::zno;

#[zno(name = "a", some::unknown=true)]
fn f() {}

fn main() {}
